# badger2040-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap  pico_extras_import.cmake  pico_sdk_import.cmake  pimoroni_pico_import.cmake
.devcontainer/: Dockerfile  devcontainer.json
programexample/: CMakeLists.txt  main.cpp
